# iz2_cpp

./: CPPLINT.cfg  Makefile  README.md
.github/workflows/: ci.yml
iz2/: CMakeLists.txt  main.c  predicat.txt  variables.txt
iz2/din_tests/: CMakeLists.txt  test.cpp
iz2/dinamic_lib/: CMakeLists.txt  din_lib.c  din_lib.h
iz2/stat_tests/: CMakeLists.txt  test.cpp
iz2/static_lib/: CMakeLists.txt  stat_lib.c  stat_lib.h
iz2/tests/: CMakeLists.txt  din_tests.cpp  stat_tests.cpp
linters/: run.sh
